k8s/apps/kubernetes-dashboard/resources/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard

spec:
  type: NodePort
  ports:
    - name: https
      port: 443
      targetPort: https
      nodePort: 30002
